<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/largeImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/userImage" />

    <TextView
        android:id="@+id/firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/largeImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/firstname"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/firstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/lastname"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/gender"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/gender"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/age"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/mail"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/temp"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/weather_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/temp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/weatherImage" />


</RelativeLayout>